--- a/src/app/custom-form/custom-form.component.html
+++ b/src/app/custom-form/custom-form.component.html
@@ -25,15 +25,22 @@
       (cdkDropListDropped)="drop($event)">
       <div class="example-box1" [style.width]="item.listingWidth" *ngFor="let item of done" cdkDrag>
         <div [class]="item?.id === selectedInput?.id ? 'selected-input input-container' : 'input-container'" (click)="onSelectInput(item)">
-          <b class="mb-2">{{ item.label }}</b><br/>
-          @if(item.type !== 'select') {
-            <input [type]="item.type" [placeholder]="item.name" class="form-control" [style.padding]="item.padding" [style.margin]="item.margin"
+          @if(item.tag === 'input') {
+            <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
+            <input [type]="item.type" [id]="item.itemId" [placeholder]="item.placeholder" class="form-control" [style.padding]="item.padding" [style.margin]="item.margin"
             [style.font-size]="item.fontSize" [style.font-family]="item.fontFamily"
             [style.color]="item.textColor" [style.border-color]="item.borderColor"
             [style.height]="item.listingHeight"
             [style.background-color]="item.backgroundColor" appResizable />
-          } @else {
-            <select class="form-select">
+          } @else if(item.tag === 'radio' || item.tag === 'checkbox') {
+            <input class="form-check-input me-2" [type]="item.type" [id]="item.itemId" [name]="item.name"/>
+            <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
+          } @else if(item.tag === 'textarea') {
+            <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
+            <textarea class="form-control" [placeholder]="item.placeholder" [id]="item.itemId"></textarea>
+          } @else if(item.tag === 'select') {
+            <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
+            <select class="form-select" [id]="item.itemId">
               <option value="1">Demo</option>
             </select>
           }
