--- a/src/app/form-properties/form-properties.component.html
+++ b/src/app/form-properties/form-properties.component.html
@@ -10,8 +10,16 @@
   <div *ngIf="listingForm">
       <form [formGroup]="listingForm">
         <div class="form-group my-2">
+          <label for="inputId">Id</label>
+          <input type="text" id="inputId" class="form-control" formControlName="inputId" />
+        </div>
+        <div class="form-group my-2">
           <label for="name">Name</label>
           <input type="text" id="name" class="form-control" formControlName="name" />
+        </div>
+        <div class="form-group my-2">
+          <label for="placeholder">Placeholder</label>
+          <input type="text" id="placeholder" class="form-control" formControlName="placeholder" />
         </div>
         <div class="form-group my-2">
           <label for="label">Label</label>
@@ -31,7 +39,7 @@
         <div class="form-row">
           <div class="form-group col-md-6 my-2">
             <label for="listingWidth">Listing Width</label>
-            <select class="form-control" id="listingWidth" formControlName="listingWidth">
+            <select class="form-select" id="listingWidth" formControlName="listingWidth">
               <option value="100%">100 %</option>
               <option value="75%">75 %</option>
               <option value="50%">50 %</option>
