--- a/src/app/custom-form/custom-form.component.html
+++ b/src/app/custom-form/custom-form.component.html
@@ -1,12 +1,20 @@
 <!-- <input type="text" appResizable /> -->
+<div class="header row">
+  <h4 class="col-md-6">Header</h4>
+  <div class="d-flex justify-content-end col-md-6">
+    <button class="btn btn-primary" type="button" (click)="addSection(content)" >+ Add Section</button>
+  </div>
+</div>
+
 <div class="row no-gutter">
+  Something = {{getConnectedDropListsIds}}
   <div class="col-3">
   
     <div
       cdkDropList
       #todoList="cdkDropList"
       [cdkDropListData]="inputList"
-      [cdkDropListConnectedTo]="[doneList]"
+      [cdkDropListConnectedTo]="getConnectedDropListsIds"
       class="example-list"
       (cdkDropListDropped)="drop($event)">
       <div class="example-box" *ngFor="let item of inputList" cdkDrag>
@@ -15,40 +23,67 @@
     </div>
   </div>
   
-  <div class="col-6">
+  <div class="col-6"  *ngFor="let section of sectionList; let i = index">
     <div
       cdkDropList
-      #doneList="cdkDropList"
       [cdkDropListData]="done"
-      [cdkDropListConnectedTo]="[todoList]"
+      [cdkDropListConnectedTo]="getConnectedDropLists(i)"
       class="example-list1"
       (cdkDropListDropped)="drop($event)">
       <div class="example-box1" [style.width]="item.listingWidth" *ngFor="let item of done" cdkDrag>
         <div [class]="item?.id === selectedInput?.id ? 'selected-input input-container' : 'input-container'" (click)="onSelectInput(item)">
           @if(item.tag === 'input') {
             <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
-            <input [type]="item.type" [id]="item.itemId" [placeholder]="item.placeholder" class="form-control" [style.padding]="item.padding" [style.margin]="item.margin"
-            [style.font-size]="item.fontSize" [style.font-family]="item.fontFamily"
-            [style.color]="item.textColor" [style.border-color]="item.borderColor"
-            [style.height]="item.listingHeight"
-            [style.background-color]="item.backgroundColor" appResizable />
+            <input [type]="item.type" [id]="item.itemId" [placeholder]="item.placeholder" class="form-control pointer-none" appResizable />
           } @else if(item.tag === 'radio' || item.tag === 'checkbox') {
-            <input class="form-check-input me-2" [type]="item.type" [id]="item.itemId" [name]="item.name"/>
+            <input class="form-check-input me-2 pointer-none" [type]="item.type" [id]="item.itemId" [name]="item.name"/>
             <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
           } @else if(item.tag === 'textarea') {
-            <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
+            <label class="mb-2 form-label fw-bold pointer-none" [for]="item.itemId">{{ item.label }}</label>
             <textarea class="form-control" [placeholder]="item.placeholder" [id]="item.itemId"></textarea>
           } @else if(item.tag === 'select') {
-            <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
+            <label class="mb-2 form-label fw-bold pointer-none" [for]="item.itemId">{{ item.label }}</label>
             <select class="form-select" [id]="item.itemId">
               <option value="1">Demo</option>
             </select>
+          } @else if(item.tag === 'section') {
+            <h3 for="" class="mb-2 form-label fw-bold">{{item.label}}</h3>
+            <hr>
           }
         </div>
       </div>
     </div>
+
   </div>
   
+
+  <ng-template #content let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Add Section</h4>
+      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss()"></button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="listingForm">
+        <div class="mb-3">
+          <label for="dateOfBirth">Section Name</label>
+          <div class="input-group">
+            <input
+              [(ngModel)]="sectionName"
+              [ngModelOptions]="{standalone: true}"
+              id="dateOfBirth"
+              class="form-control"
+              placeholder="Please enter section name"
+              type="text"
+            />
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-secondary" (click)="saveSection()">Save</button>
+    </div>
+  </ng-template>
+
   <div class="col-3">
     <div class="right-container">
       <app-form-properties [properties]="selectedInput" [listingForm]="listingForm"></app-form-properties>
