--- a/src/app/custom-form/custom-form.component.scss
+++ b/src/app/custom-form/custom-form.component.scss
@@ -94,3 +94,15 @@
   padding: 10px;
   border: 1px solid blue;
 }
+.pointer-none {
+  pointer-events: none;
+}
+.header {
+  border: solid 1px #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  background: white;
+  // border-radius: 4px;
+  // overflow: hidden;
+  // display: block;
+}
