--- a/src/app/custom-form/custom-form.component.scss
+++ b/src/app/custom-form/custom-form.component.scss
@@ -106,3 +106,11 @@
   // overflow: hidden;
   // display: block;
 }
+
+.editIcon {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  display: flex;
+  justify-content: end;
+}
