--- a/src/app/custom-form/custom-form.component.scss
+++ b/src/app/custom-form/custom-form.component.scss
@@ -1,42 +1,36 @@
-.example-container {
-  width: 400px;
-  max-width: 100%;
-  margin: 0 25px 25px 0;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.example-list {
-  border: solid 1px #ccc;
+.input-fields-section {
+  border: 0px solid #ccc;
   min-height: 60px;
   background: white;
-  // border-radius: 4px;
   overflow: hidden;
   display: block;
+  height: 91.9vh;
+  border-right-width: 1px;
 }
-.example-list1 {
+.form-edit-section {
   border: solid 1px #ccc;
+  margin-top: 1rem;
   min-height: 60px;
   background: white;
-  // border-radius: 4px;
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
 }
-.right-container {
-  border: solid 1px #ccc;
+.input-properties-section {
+  border: solid 0px #ccc;
   min-height: 60px;
   background: white;
-  // border-radius: 4px;
   overflow: hidden;
   display: block;
+  height: 91.9vh;
+  border-left-width: 1px;
 }
 
 .input-container {
   width: 100%;
 }
 
-.example-box {
+.input-field-lable {
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
@@ -50,9 +44,8 @@
   background: white;
   font-size: 14px;
 }
-.example-box1 {
+.inner-section-block {
   padding: 20px 10px;
-  // border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -80,12 +73,8 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
-  border: none;
-}
-
-.example-list, .example-list1 {
-  &.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.input-fields-section, .form-edit-section {
+  &.cdk-drop-list-dragging .input-field-lable:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
 }
@@ -100,7 +89,6 @@
 .header {
   border: solid 1px #ccc;
   padding: 10px;
-  margin-bottom: 10px;
   background: white;
   // border-radius: 4px;
   // overflow: hidden;
