--- a/src/app/form-properties/form-properties.component.html
+++ b/src/app/form-properties/form-properties.component.html
@@ -39,9 +39,7 @@
           </div>
         </div>
 
-      </form>
-      <form action="" [formGroup]="getFormValidations">
-        <div class="form-row">
+        <div formGroupName="formValidations">
           <h6>Validations</h6>
           <div class="form-check col-md-6 my-2">
             <input type="checkbox" class="form-check-input" id="fieldRequired" formControlName="fieldRequired">
@@ -52,7 +50,7 @@
             <input type="text" id="minimum" class="form-control" formControlName="minimum" />
           </div>
           <div class="form-group my-2">
-            <label for="maximium">Maximum</label>
+            <label for="maximum">Maximum</label>
             <input type="text" id="maximum" class="form-control" formControlName="maximum" />
           </div>
           <div class="form-group my-2">
