--- a/src/app/custom-form/custom-form.component.scss
+++ b/src/app/custom-form/custom-form.component.scss
@@ -98,7 +98,26 @@
 .editIcon {
   position: absolute;
   top: 15px;
+  right: 60px;
+  display: flex;
+  justify-content: end;
+  cursor: pointer;
+}
+
+.deleteSection {
+  position: absolute;
+  top: 15px;
   right: 20px;
   display: flex;
   justify-content: end;
+  cursor: pointer;
+}
+
+.deleteInput {
+  position: absolute;
+  top: 25px;
+  right: 20px;
+  display: flex;
+  justify-content: end;
+  cursor: pointer;
 }
