--- a/src/app/form-properties/form-properties.component.html
+++ b/src/app/form-properties/form-properties.component.html
@@ -2,33 +2,42 @@
 <div class="p-2">
   <div *ngIf="listingForm">
       <form [formGroup]="listingForm">
+        <!-- Id -->
         <div class="form-group my-2">
           <label for="inputId">Id</label>
           <input type="text" id="inputId" class="form-control" formControlName="inputId" />
         </div>
+        <!-- Name -->
         <div class="form-group my-2">
           <label for="name">Name</label>
           <input type="text" id="name" class="form-control" formControlName="name" />
         </div>
+        <!-- Placeholder -->
         <div class="form-group my-2">
           <label for="placeholder">Placeholder</label>
           <input type="text" id="placeholder" class="form-control" formControlName="placeholder" />
         </div>
+        <!-- Label -->
         <div class="form-group my-2">
           <label for="label">Label</label>
           <input type="text" id="label" class="form-control" formControlName="label" />
         </div>
-    
+        <!-- Control Name -->
         <div class="form-group my-2">
-          <label for="description">Description</label>
-          <textarea id="description" class="form-control" rows="3" formControlName="description"></textarea>
+          <label for="controlName">Control Name</label>
+          <input type="text" id="controlName" class="form-control" formControlName="controlName" />
         </div>
-    
+        <!-- Title -->
+        <div class="form-group my-2">
+          <label for="title">Title</label>
+          <input type="text" id="title" class="form-control" formControlName="title" />
+        </div>
+        <!-- Is Active -->
         <div class="form-check my-2">
           <input type="checkbox" id="isActive" class="form-check-input" formControlName="isActive" />
           <label for="isActive" class="form-check-label">Is Active</label>
         </div>
-    
+        <!-- Listing Width -->
         <div class="form-row">
           <div class="form-group col-md-6 my-2">
             <label for="listingWidth">Listing Width</label>
@@ -41,18 +50,22 @@
 
         <div formGroupName="formValidations">
           <h6>Validations</h6>
+          <!-- Is Required -->
           <div class="form-check col-md-6 my-2">
             <input type="checkbox" class="form-check-input" id="fieldRequired" formControlName="fieldRequired">
             <label for="fieldRequired">Required</label>
           </div>
+          <!-- Minimum -->
           <div class="form-group my-2">
             <label for="minimum">Minimum</label>
             <input type="text" id="minimum" class="form-control" formControlName="minimum" />
           </div>
+          <!-- Maximum -->
           <div class="form-group my-2">
             <label for="maximum">Maximum</label>
             <input type="text" id="maximum" class="form-control" formControlName="maximum" />
           </div>
+          <!-- Regex -->
           <div class="form-group my-2">
             <label for="regex">Regex</label>
             <input type="text" id="regex" class="form-control" formControlName="regex" />
