--- a/src/app/form-preview/form-preview.component.scss
+++ b/src/app/form-preview/form-preview.component.scss
@@ -5,3 +5,23 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.inner-section-block {
+  padding: 20px 10px;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  background: white;
+  font-size: 14px;
+}
+
+.input-container {
+  width: 100%;
+}
+
+.pointer-none {
+  pointer-events: none;
+}
