--- a/src/app/form-properties/form-properties.component.html
+++ b/src/app/form-properties/form-properties.component.html
@@ -20,17 +20,12 @@
         <!-- Label -->
         <div class="form-group my-2">
           <label for="label">Label</label>
-          <input type="text" id="label" class="form-control" formControlName="label" />
+          <input type="text" id="label" class="form-control" formControlName="label" (input)="generateControlName($event)"/>
         </div>
         <!-- Control Name -->
         <div class="form-group my-2">
           <label for="controlName">Control Name</label>
-          <input type="text" id="controlName" class="form-control" formControlName="controlName" />
-        </div>
-        <!-- Title -->
-        <div class="form-group my-2">
-          <label for="title">Title</label>
-          <input type="text" id="title" class="form-control" formControlName="title" />
+          <input type="text" id="controlName" class="form-control disableSection" formControlName="controlName" readonly />
         </div>
         <!-- Is Active -->
         <div class="form-check my-2">
