Add multiselect dropdown and missing functionality.

--- a/src/app/custom-form/custom-form.component.scss
+++ b/src/app/custom-form/custom-form.component.scss
@@ -18,11 +18,10 @@
 }
 .input-properties-section {
   border: solid 0px #ccc;
-  min-height: 60px;
   background: white;
   overflow: hidden;
   display: block;
-  // height: 91.9vh;
+  min-height: 91.9vh;
   border-left-width: 1px;
 }
 
@@ -86,7 +85,7 @@
 .pointer-none {
   pointer-events: none;
 }
-.header {
+.main-header {
   border: solid 1px #ccc;
   padding: 10px;
   background: white;
@@ -120,4 +119,32 @@
   display: flex;
   justify-content: end;
   cursor: pointer;
+}
+
+// Multi select dropdown
+.access-points-ddl .header {
+  width: 100%;
+  border: 1px solid #ccc;
+  height: 40px;
+  border-radius: 3px;
+  padding: 3px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  position: relative;
+}
+ 
+.access-points-ddl .header div {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 90%;
+}
+ 
+.access-points-ddl .header:before {
+  font-size: 16px;
+  position: absolute;
+  right: 10px;
+  font-weight: bold;
+  color: #333;
 }
