--- a/src/app/form-preview/form-preview.component.html
+++ b/src/app/form-preview/form-preview.component.html
@@ -12,7 +12,19 @@
     </div>
       <div class="inner-section-block  example-box1" [style.width]="item.listingWidth" *ngFor="let item of section.done || []">
         <div class="input-container">
-          @if(item.tag === 'input') {
+            @if(item.tag === 'text' && item.type === 'number' && item.hasRange) {
+              <label class="mb-2 form-label fw-bold">{{ item.label }}</label>
+              <div class="d-flex gap-2">
+                <input [type]="item.type" [id]="item.id" placeholder="Min" class="form-control pointer-none" />
+                <input [type]="item.type" [id]="item.id" placeholder="Max" class="form-control pointer-none" />
+              </div>
+            } @else if(item.type === 'time' && item.hasRange) {
+              <label class="mb-2 form-label fw-bold">{{ item.label }}</label>
+              <div class="d-flex gap-2">
+                <input [type]="item.type" [id]="item.id" placeholder="Min" class="form-control w-48 pointer-none" />
+                <input [type]="item.type" [id]="item.id" placeholder="Max" class="form-control w-48 pointer-none" />
+              </div>
+            } @else if(item.tag === 'text' || item.tag === 'input') {
               <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
               <input [type]="item.type" [id]="item.itemId" [placeholder]="item.placeholder" class="form-control pointer-none" />
             } @else if(item.tag === 'radio' || item.tag === 'checkbox') {
@@ -23,12 +35,23 @@
               <textarea class="form-control pointer-none" [placeholder]="item.placeholder" [id]="item.itemId"></textarea>
             } @else if(item.tag === 'select') {
               <label class="mb-2 form-label fw-bold" [for]="item.itemId">{{ item.label }}</label>
-              <select class="form-select pointer-none" [id]="item.itemId">
-                <option value="1">Demo</option>
-              </select>
+              @if(item?.isMultiSelect) {
+                <div class="access-points-ddl position-relative custom-dropdown">
+                <div class="header form-control form-select" tabindex="0" >
+                    <div>
+                        <span>
+                            Option 1, Option 2, Option 3
+                        </span>
+                    </div>
+                </div>
+                </div>
+              } @else {
+                <select class="form-select pointer-none" [id]="item.itemId">
+                  <option value="1">Demo</option>
+                </select>
+              }
             }
         </div>  
-        <!-- </div> -->
       </div>
   </div>
 </div>
