--- a/src/app/custom-form/custom-form.component.scss
+++ b/src/app/custom-form/custom-form.component.scss
@@ -48,7 +48,7 @@
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
