--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,11 @@
 .w-48 {
   width: 48%;
 }
+
+.fw-semi-bold {
+  font-weight: 500 !important;
+}
+
+.font-small {
+  font-size: small !important;
+}
