--- a/src/app/custom-form/custom-form.component.html
+++ b/src/app/custom-form/custom-form.component.html
@@ -42,22 +42,22 @@
           </span>
           <div [class]="item?.id === selectedInput?.id ? 'selected-input input-container' : 'input-container'">
             @if(item.tag === 'text' && item.type === 'number' && item.hasRange) {
-              <label class="mb-2 form-label fw-bold">{{ item.label }}</label>
+              <label class="mb-2 form-label fw-bold" [ngClass]="item.formValidations.fieldRequired ? 'required' : ''">{{ item.label }}</label>
               <div class="d-flex gap-2">
                 <input [type]="item.type" [id]="item.id" placeholder="Min" class="form-control pointer-none" />
                 <input [type]="item.type" [id]="item.id" placeholder="Max" class="form-control pointer-none" />
               </div>
             } @else if(item.type === 'time' && item.hasRange) {
-              <label class="mb-2 form-label fw-bold">{{ item.label }}</label>
+              <label class="mb-2 form-label fw-bold" [ngClass]="item.formValidations.fieldRequired ? 'required' : ''">{{ item.label }}</label>
               <div class="d-flex gap-2">
                 <input [type]="item.type" [id]="item.id" placeholder="Min" class="form-control w-48 pointer-none" />
                 <input [type]="item.type" [id]="item.id" placeholder="Max" class="form-control w-48 pointer-none" />
               </div>
             } @else if(item.tag === 'text' || item.tag === 'input') {
-              <label class="mb-2 form-label fw-bold">{{ item.label }}</label>
+              <label class="mb-2 form-label fw-bold" [ngClass]="item.formValidations.fieldRequired ? 'required' : ''">{{ item.label }}</label>
               <input [type]="item.type" [id]="item.id" [placeholder]="item.placeholder" class="form-control pointer-none" />
              } @else if(item.tag === 'radio' || item.tag === 'checkbox') {
-              <label class="mb-2 form-label fw-bold pointer-none">{{ item.label }}</label>
+              <label class="mb-2 form-label fw-bold pointer-none" [ngClass]="item.formValidations.fieldRequired ? 'required' : ''">{{ item.label }}</label>
               <div *ngFor="let option of item.options" class="form-check">
                 <input
                   class="form-check-input pointer-none"
@@ -70,10 +70,10 @@
               </div>
               <button class="btn btn-link p-0 text-decoration-none fw-semi-bold font-small" (click)="addRadioOption(item)">+ Add Option</button>
             } @else if(item.tag === 'textarea') {
-              <label class="mb-2 form-label fw-bold pointer-none" [for]="item.id">{{ item.label }}</label>
+              <label class="mb-2 form-label fw-bold pointer-none" [for]="item.id" [ngClass]="item.formValidations.fieldRequired ? 'required' : ''">{{ item.label }}</label>
               <textarea class="form-control" [placeholder]="item.placeholder" [id]="item.id"></textarea>
             } @else if(item.tag === 'select') {
-              <label class="mb-2 form-label fw-bold" [for]="item.id">{{ item.label }}</label>
+              <label class="mb-2 form-label fw-bold" [for]="item.id" [ngClass]="item.formValidations.fieldRequired ? 'required' : ''">{{ item.label }}</label>
               @if(item?.isMultiSelect) {
                 <div class="access-points-ddl position-relative custom-dropdown">
                   <div class="header form-control form-select" tabindex="0" >
@@ -132,6 +132,7 @@
               class="form-control"
               placeholder="Please enter section name"
               type="text"
+              ngbAutofocus
             />
           </div>
         </div>
