--- a/src/app/form-properties/form-properties.component.html
+++ b/src/app/form-properties/form-properties.component.html
@@ -70,14 +70,14 @@
                     <label for="fieldRequired" class="mb-2 form-label ">Required</label>
                   </div>
                   <!-- Minimum -->
-                  <div class="form-group my-2" *ngIf="listingForm.value?.type === 'number'">
-                    <label for="minimum" class="mb-2 form-label ">Minimum</label>
-                    <input type="text" id="minimum" class="form-control" formControlName="minimum" />
+                  <div class="form-group my-2" *ngIf="listingForm.value?.type === 'number' || listingForm.value?.type === 'text' || listingForm.value?.type === 'textarea' ">
+                    <label for="minimum" class="mb-2 form-label ">{{listingForm.value?.type === 'number' ? 'Minimum Value' : 'Minimum Length'}}</label>
+                    <input type="number" id="minimum" class="form-control" formControlName="minimum" />
                   </div>
                   <!-- Maximum -->
-                  <div class="form-group my-2" *ngIf="listingForm.value?.type === 'number'">
-                    <label for="maximum" class="mb-2 form-label ">Maximum</label>
-                    <input type="text" id="maximum" class="form-control" formControlName="maximum" />
+                  <div class="form-group my-2" *ngIf="listingForm.value?.type === 'number' || listingForm.value?.type === 'text' || listingForm.value?.type === 'textarea' ">
+                    <label for="maximum" class="mb-2 form-label ">{{listingForm.value?.type === 'number' ? 'Maximum Value' : 'Maximum Length'}}</label>
+                    <input type="number" id="maximum" class="form-control" formControlName="maximum" />
                   </div>
                   <!-- Regex -->
                   <div class="form-group my-2">
